--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css" media="screen" charset="utf-8">
     <script charset="utf-8">
       require('./index')
-      
+      require('electron-connect').client.create()
     </script>
   </head>
   <body>
